[package]
authors = ["Brendan Zabarauskas <bjzaba@yahoo.com.au>", "Luqman Aden", "Arturo Castro"]
description = "A library that provides types and conversions for working with various color formats."
name = "color"
version = "0.1.0"
[dependencies]
generic-array = "0.9.0"
nalgebra = "0.13.0"
num-traits = "0.1.40"
numeric-array = "0.1.4"
typenum = "1.9.0"

[lib]
name = "color"
path = "src/lib.rs"
